[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Scripts/Snowpile.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/SnowBall.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 128.091, 91.8467 )

[node name="Snowpile" type="Area2D" groups=[
"snowpile",
]]

scale = Vector2( 0.5, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="PlayerSnowAddTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.75
one_shot = false
autostart = false

[node name="EnemySnowAddTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.75
one_shot = false
autostart = false

[connection signal="area_entered" from="." to="." method="_on_Snowpile_area_entered"]

[connection signal="area_exited" from="." to="." method="_on_Snowpile_area_exited"]

[connection signal="timeout" from="PlayerSnowAddTimer" to="." method="_on_PlayerSnowAddTimer_timeout"]

[connection signal="timeout" from="EnemySnowAddTimer" to="." method="_on_EnemySnowAddTimer_timeout"]


